--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="clear_search">clear search</string>
     <string name="start_polling">Start Polling</string>
     <string name="stop_polling">Stop Polling</string>
+    <string name="new_pictures_title">" New PhotoGallery Pictures"</string>
+    <string name="new_pictures_text">You have new pictures from PhotoGallery</string>
 </resources>
